feat: search implementation
